# MazeEngine

./: .gitattributes  .gitmodules  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  Makefile  README.md  _image.tiff  object3.stl  ransac_pseudocode.txt  todo.txt
.github/workflows/: ccpp.yml
meshes/: ascii.stl  object.ply  object.stl  object2.ply  object2.stl  object5.ply  object6.ply  old_object.ply  plane2.ply
shaders/: frag.glsl  image.glsl  image_rainbow.glsl  phong.glsl  static.glsl  static2.glsl  vert.glsl
src/: Component.hpp  Dep.hpp  Main.cpp  MazeEngine.cpp  MazeEngine.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Object.hpp  Read.cpp  Read.hpp  Render.cpp  Render.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Transform.hpp  Window.cpp  Window.hpp  main.cpp  main.hpp  main_old.cpp  read.cpp  shaders.cpp
src/shaders/: phong.fs  static.fs  vert.vs
